# lume-gpt

./: .gitattributes  .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
devel/: class_devel.ipynb
examples/: Untitled.ipynb  Windows_Powershell_Instructions.ipynb  apex_gun_example.ipynb  auto_phasing.ipynb  autoscale.ipynb  check_distgen_input_particles.ipynb  cold_ncrf_example.ipynb  cu_injector_example.ipynb  cu_injector_frontend.ipynb  drift.ipynb  drift_benchmark.ipynb  drift_gpu.ipynb  eic.25.GeV.precool.injector.ipynb  eic_cu_gun_example.ipynb  fields  gdf_to_particles.ipynb  gpt.in  gpt.temp.in  gpt_manual_spin_tracking.ipynb  gpt_particles.gdf  multiple_runs.ipynb  old.ipynb  particle_id_test.ipynb  quadf.ipynb  sectormagnet.ipynb  simple_gpt_example.ipynb  simple_gpt_example.old.ipynb  spacecharge3dTree_with_cathode.ipynb  spin_tracking.ipynb  srf_injector.ipynb  symlinks.ipynb  tao_to_gpt_fodo_example.ipynb  tesla_9cell_cavity_example.ipynb
examples/elements/: Bzsolenoid.ipynb  Erect.ipynb  (+21 more)
gpt/: __init__.py  _version.py  archive.py  autoscale.py  bends.py  bstatic.py  easygdf.py  element.py  estatic.py  evaluate.py  field_map.py  gpt.py  gpt_distgen.py  gpt_phasing.py  gpt_tao.py  jupyter_test.ipynb  lattice.py  maps.orig.py  maps.py  merit.py  parsers.py  particles.py  plot.py  remove_particles.py  screen.py  template.py  tools.py  watcher.py  weewee.py  wien_filter.py
templates/: chuck_a_duck.tgz  cold_ncrf_gun.tgz
tests/: cu_injector.ipynb  dcgun.ipynb  gpt.ipynb  particle_id_test.ipynb
(+213 files in other folders)
